crates/aiy-core/src/authority/snapshots/aiy_core__authority__execution_time_estimator__tests__execution_time_observer_v80.snap
---
source: crates/aiy-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 80
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 9
          - secs: 0
            nanos: 26000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 12000000
        - - 10
          - secs: 0
            nanos: 6000000
      stake_weighted_median:
        secs: 0
        nanos: 12000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 0
        - - 8
          - secs: 0
            nanos: 56000000
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 56000000
  - - SplitCoins
    - observations:
        - - 8
          - secs: 0
            nanos: 61000000
        - - 9
          - secs: 0
            nanos: 68000000
        - - 3
          - secs: 0
            nanos: 27000000
        - - 4
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 9
          - secs: 0
            nanos: 23000000
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 80000000
        - - 8
          - secs: 0
            nanos: 17000000
      stake_weighted_median:
        secs: 0
        nanos: 23000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 0
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 365000000
        - - 4
          - secs: 0
            nanos: 261000000
      stake_weighted_median:
        secs: 0
        nanos: 365000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 1
          - secs: 0
            nanos: 197000000
        - - 10
          - secs: 0
            nanos: 223000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 223000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 365000000
  - - mixed_move_calls
    - secs: 0
      nanos: 588000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 304000000
  - - transfer_objects_1_items
    - secs: 0
      nanos: 46000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 122000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 112000000
  - - make_move_vec_0_elements
    - secs: 0
      nanos: 12000000
  - - mixed_commands
    - secs: 0
      nanos: 192000000
  - - upgrade_package
    - secs: 0
      nanos: 0
