crates/aiy-core/src/authority/snapshots/aiy_core__authority__execution_time_estimator__tests__execution_time_observer_v91.snap
---
source: crates/aiy-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 91
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 4
          - secs: 0
            nanos: 28000000
        - - 8
          - secs: 0
            nanos: 18000000
        - - 6
          - secs: 0
            nanos: 27000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 27000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 5
          - secs: 0
            nanos: 52000000
        - - 7
          - secs: 0
            nanos: 56000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 56000000
  - - SplitCoins
    - observations:
        - - 2
          - secs: 0
            nanos: 80000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 10
          - secs: 0
            nanos: 19000000
        - - 0
          - ~
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 88000000
      stake_weighted_median:
        secs: 0
        nanos: 88000000
  - - Upgrade
    - observations:
        - - 5
          - secs: 0
            nanos: 161000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 10
          - secs: 0
            nanos: 448000000
        - - 8
          - secs: 0
            nanos: 215000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 8
          - secs: 0
            nanos: 117000000
        - - 7
          - secs: 0
            nanos: 403000000
        - - 6
          - secs: 0
            nanos: 360000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 403000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 671000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 464000000
  - - transfer_objects_1_items
    - secs: 0
      nanos: 176000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 183000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 168000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 135000000
  - - mixed_commands
    - secs: 0
      nanos: 387000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
